syntax = "proto3";  // Updated to proto3 for better compatibility

package datastorage;

service DataStorageAPI {
    rpc ReadData (ReadDataRequest) returns (ReadDataResponse);
    rpc WriteData (WriteDataRequest) returns (WriteDataResponse);
}

message ReadDataRequest {
    string key = 1;  // Fields in proto3 are optional by default
}

message ReadDataResponse {
    bytes data = 1;
    string error_message = 2;  // Optional error message
}

message WriteDataRequest {
    string key = 1;
    bytes data = 2;
}

message WriteDataResponse {
    bool success = 1;
    string error_message = 2;  // Optional error message
}
